; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/omap2/omapfb/dss/extr_apply.c_omap_dss_mgr_apply_ovl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/omap2/omapfb/dss/extr_apply.c_omap_dss_mgr_apply_ovl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.omap_overlay = type { i32 }
%struct.ovl_priv_data = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.omap_overlay*)* @omap_dss_mgr_apply_ovl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @omap_dss_mgr_apply_ovl(%struct.omap_overlay* %0) #0 {
  %2 = alloca %struct.omap_overlay*, align 8
  %3 = alloca %struct.ovl_priv_data*, align 8
  store %struct.omap_overlay* %0, %struct.omap_overlay** %2, align 8
  %4 = load %struct.omap_overlay*, %struct.omap_overlay** %2, align 8
  %5 = call %struct.ovl_priv_data* @get_ovl_priv(%struct.omap_overlay* %4)
  store %struct.ovl_priv_data* %5, %struct.ovl_priv_data** %3, align 8
  %6 = load %struct.ovl_priv_data*, %struct.ovl_priv_data** %3, align 8
  %7 = getelementptr inbounds %struct.ovl_priv_data, %struct.ovl_priv_data* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  br label %21

11:                                               ; preds = %1
  %12 = load %struct.ovl_priv_data*, %struct.ovl_priv_data** %3, align 8
  %13 = getelementptr inbounds %struct.ovl_priv_data, %struct.ovl_priv_data* %12, i32 0, i32 0
  store i32 0, i32* %13, align 4
  %14 = load %struct.ovl_priv_data*, %struct.ovl_priv_data** %3, align 8
  %15 = getelementptr inbounds %struct.ovl_priv_data, %struct.ovl_priv_data* %14, i32 0, i32 1
  store i32 1, i32* %15, align 4
  %16 = load %struct.ovl_priv_data*, %struct.ovl_priv_data** %3, align 8
  %17 = getelementptr inbounds %struct.ovl_priv_data, %struct.ovl_priv_data* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.ovl_priv_data*, %struct.ovl_priv_data** %3, align 8
  %20 = getelementptr inbounds %struct.ovl_priv_data, %struct.ovl_priv_data* %19, i32 0, i32 3
  store i32 %18, i32* %20, align 4
  br label %21

21:                                               ; preds = %11, %10
  ret void
}

declare dso_local %struct.ovl_priv_data* @get_ovl_priv(%struct.omap_overlay*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
